# visual-code-editor

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.github/workflows/: visual-regression.yml
app/: index.tsx  router.tsx
app/components/: AppShell.tsx  ControlIcon.tsx  DetailPanel.tsx  DiagramCanvas.tsx  HoverOverlay.tsx  IconSvg.tsx  NodeActionOverlay.tsx  PanelPrompt.tsx  ParentSummary.tsx  PromptDock.tsx  SearchOverlay.tsx  WatcherPanel.tsx
app/graph/: BehaviorPlayback.ts  DeepCardOverlay.tsx  DrillTransition.ts  EdgeLayer.tsx  EdgePath.tsx  FocusStackService.ts  GraphSurface.tsx  GraphViewport.tsx  InteractionService.ts  NodeLayer.tsx  PlaybackControls.tsx  PresentationStateService.ts  ScenarioBox.tsx  ShadowboxChrome.tsx  ShadowboxModal.tsx  TransitionService.ts  TransportStore.ts  diff-overlay.ts  test-overlay.ts
app/lib/: cytoscape-style.ts  detail-panel-links.ts  diagram-data.ts  diagram-elements.ts  diagram-transition.ts  edge-animation.ts  (+2 more)
e2e/: a11y-overlays.spec.ts  animation-hover-lift.capture.spec.ts  animation-qa-full.capture.spec.ts  diagram-transitions.spec.ts  diagram.spec.ts  graph-diffs.spec.ts  helpers.ts  interactions.spec.ts  panel-prompt.spec.ts  test-overlays.spec.ts  toolbar-chrome.spec.ts  ui-diagram.spec.ts  visual-regression.spec.ts  watcher.spec.ts
server/: watcher.ts
tests/: __init__.py  test_assets_and_utils.py  test_ingest_lifemap_v1.py  test_render_site.py  test_renderers.py  test_validate_graph.py  test_workspace_model.py
(+60 files in other folders)
